Added: The controller and security-adapter & Modified the application.yml to add properties for OAuth login via GitHub

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>Home | Better-Reads-Application</title>
+    <title>Home | Better-Reads-App</title>
     <meta name="description" content=""/>
     <meta name="viewport" content="width=device-width"/>
     <base href="/"/>
 </head>
 <body>
     <h1>Login</h1>
+    <p>Welcome to Better reads app. Login via GitHub to continue...</p>
+    <div>
+        Login With GitHub: <a href="/oauth2/authorization/github">click here</a>
+    </div>
 </body>
 </html>
