Added: The Book entity, controller, repository & book-html-templates

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <h1>Login</h1>
-    <p>Welcome to Better reads app. Login via GitHub to continue...</p>
+    <p>Welcome to Better reads app. Login with GitHub to continue...</p>
     <div>
-        Login With GitHub: <a href="/oauth2/authorization/github">click here</a>
+        Login with GitHub: <a href="/oauth2/authorization/github">click here</a>
     </div>
 </body>
 </html>
