--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
+
 <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Book Details</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 </head>
+
 <body>
-    <p th:text="${book.name}">Book Name</p>
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="padding-bottom: 20px">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">Better Reads</a>
+            </div>
+        </nav>
+
+        <section class="content">
+            <div class="card">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img th:src="${coverImage}" class="img-fluid rounded-start" alt="..." />
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title display-1" th:text="${book.name}">Book Name</h5>
+                            <p class="card-text display-5" th:text="${book.authorNames}">Author name</p>
+                            <p class="card-text" th:text="${book.description}">Book description</p>
+                            <p class="card-text">Published Date: <small class="text-muted" th:text="${book.publishedDate}">2020-01-01</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
