--- a/src/main/resources/templates/book-not-found.html
+++ b/src/main/resources/templates/book-not-found.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <title>404 Not found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 </head>
 <body>
-    <h1>Book Not found !!</h1>
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="padding-bottom: 20px">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">Better Reads</a>
+            </div>
+        </nav>
+
+        <div th:insert="components/book-search :: search-panel"></div>
+        <section class="content">
+            <div class="card">
+                <h1>Book Not found !!</h1>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
