--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -18,11 +18,12 @@
             </div>
         </nav>
 
+        <div th:insert="components/book-search :: search-panel"></div>
         <section class="content">
             <div class="card">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img th:src="${coverImage}" class="img-fluid rounded-start" alt="..." />
+                        <img th:src="${coverImage}" class="img-fluid rounded-start" src="#" alt="..." />
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
