--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -31,6 +31,45 @@
                             <p class="card-text display-5" th:text="${book.authorNames}">Author name</p>
                             <p class="card-text" th:text="${book.description}">Book description</p>
                             <p class="card-text">Published Date: <small class="text-muted" th:text="${book.publishedDate}">2020-01-01</small></p>
+
+                            <!-- Show only id user is logged in -->
+                            <form th:if="${loginId}" th:attr="action=@{/add-user-book}" method="POST">
+                                <div class="mb-3">
+                                    <label for="startDate" class="sr-only">Start Date</label>
+                                    <input type="date" id="startDate" class="form-control" name="startDate" th:value="${userBooks.startedDate}">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="completedDate" class="sr-only">Completed Date</label>
+                                    <input type="date" id="completedDate" class="form-control" name="completedDate" th:value="${userBooks.completedDate}">
+                                </div>
+                                <div class="mb-3">
+                                    <label class="form-label" for="readingStatus">Reading Status</label>
+                                    <select class="form-select" id="readingStatus" aria-label="Reading Status" name="readingStatus" th:field="${userBooks.readingStatus}">
+                                        <option selected value="0">Status</option>
+                                        <option value="reading">Currently Reading</option>
+                                        <option value="finished">Finished Reading</option>
+                                        <option value="nsr">Not Started Reading</option>
+                                    </select>
+                                </div>
+                                <div class="mb-3">
+                                    <label class="form-label" for="rating">Rating</label>
+                                    <select class="form-select" id="rating" aria-label="Rating" name="rating" th:field="${userBooks.rating}">
+                                        <option selected value="0">Select Rating</option>
+                                        <option value="1">&#9733;</option>
+                                        <option value="2">&#9733;&#9733;</option>
+                                        <option value="3">&#9733;&#9733;&#9733;</option>
+                                        <option value="4">&#9733;&#9733;&#9733;&#9733;</option>
+                                        <option value="5">&#9733;&#9733;&#9733;&#9733;&#9733;</option>
+                                    </select>
+                                </div>
+
+                                <!-- CSRF token for Spring MVC thymeleaf form -->
+                                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                                <!-- BookId for the submitted book data by logged-in user -->
+                                <input type="hidden" name="bookId" th:value="${book.id}">
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </form>
+
                         </div>
                     </div>
                 </div>
