--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,12 +7,24 @@
     <meta name="description" content=""/>
     <meta name="viewport" content="width=device-width"/>
     <base href="/"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 </head>
-<body>
-    <h1>Login</h1>
-    <p>Welcome to Better reads app. Login with GitHub to continue...</p>
-    <div>
-        Login with GitHub: <a href="/oauth2/authorization/github">click here</a>
-    </div>
-</body>
+    <body>
+        <main class="container text-center heading-top">
+            <h1 class="display-5 fw-bold">Welcome to Better reads app</h1>
+            <div class="col-lg-6 mx-auto">
+                <p class="lead mb-4 space-bottom">Control your reading habit. Track the books you read and fuel your reading.</p>
+                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center space-bottom">
+                    <a type="button" href="/oauth2/authorization/github" class="btn btn-primary btn-lg px-4 gap-3">Login via GitHub</a>
+                </div>
+            </div>
+            <div class="col-lg-6 mx-auto">
+                <p class="lead mb-4 space-bottom">Or search for a book</p>
+                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                    <div th:insert="components/book-search :: search-panel"></div>
+                </div>
+            </div>
+        </main>
+    </body>
 </html>
